# polychora

./: .gitmodules  CMakeLists.txt  README.md  parse_eusebeia.py
include/: camera.h  hyperplane.h  maths.h  mesh.h  permutations.h  polychora.h  renderer.h  shader.h  tetrahedron.h  utils.h
shaders/: compute_slice.glsl  projections.frag  projections.vert
src/: main.cpp
